fixed stories slider issue on tablet landscape

--- a/css/Sass/pages/_stories.scss
+++ b/css/Sass/pages/_stories.scss
@@ -30,6 +30,9 @@
 	@include mobile-landscape {
 		margin-top: 0px;
 	}
+	@include tablet-landscape {
+		margin-top: 50px;
+	}
 }
 
 .jumbotron-slider-text-featured-story {
@@ -41,6 +44,9 @@
 		font-size: 38px;
 	}
 	@include mobile-landscape {
+		font-size: 38px;
+	}
+	@include tablet-landscape {
 		font-size: 38px;
 	}
 }
@@ -66,6 +72,9 @@
 	@include tablet {
 		width: 100%;
 		padding: 30px;
+	}
+	@include tablet-landscape {
+		padding: 0 40px;
 	}
 }
 
