--- a/css/main.css
+++ b/css/main.css
@@ -1535,6 +1535,9 @@ footer {
   @media (min-width: 321px) and (max-width: 536px) {
     .stories-jumbotron-slider-text-subheading {
       margin-top: 0px; } }
+  @media (min-width: 1024px) and (max-width: 1124px) {
+    .stories-jumbotron-slider-text-subheading {
+      margin-top: 50px; } }
 
 .jumbotron-slider-text-featured-story {
   color: #2e7dc1;
@@ -1545,6 +1548,9 @@ footer {
     .jumbotron-slider-text-featured-story {
       font-size: 38px; } }
   @media (min-width: 321px) and (max-width: 536px) {
+    .jumbotron-slider-text-featured-story {
+      font-size: 38px; } }
+  @media (min-width: 1024px) and (max-width: 1124px) {
     .jumbotron-slider-text-featured-story {
       font-size: 38px; } }
 
@@ -1570,6 +1576,9 @@ footer {
     .stories-jumbotron-slider-text {
       width: 100%;
       padding: 30px; } }
+  @media (min-width: 1024px) and (max-width: 1124px) {
+    .stories-jumbotron-slider-text {
+      padding: 0 40px; } }
 
 .stories-jumbotron-summary {
   text-transform: initial;
